<resources>
    <string name="app_name">Udacity - Popular Movies</string>
    <string name="app_content_authority">org.viktorot.udacity_movies</string>

    <string name="action_settings">Settings</string>

    <string name="action_sort_popularity">Popularity</string>
    <string name="action_sort_vote">Vote count</string>
    <string name="action_sort_favourite">Favourites</string>

    <string name="label_original_title">Original title</string>
    <string name="label_release_date">Release date</string>
    <string name="label_score">Score</string>
    <string name="label_overview">Overview</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Reviews</string>
</resources>
