<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.Guideline
                    android:id="@+id/guide_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.05" />

                <android.support.constraint.Guideline
                    android:id="@+id/guide_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <android.support.constraint.Guideline
                    android:id="@+id/guide_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="@id/guide_left"
                    app:layout_constraintTop_toTopOf="@id/guide_top" />

                <ToggleButton
                    android:id="@+id/fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/image"
                    app:layout_constraintStart_toEndOf="@id/image" />

                <TextView
                    android:id="@+id/original_title_lbl"
                    style="@style/DetailsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_original_title"
                    app:layout_constraintStart_toStartOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/image" />

                <TextView
                    android:id="@+id/original_title_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/original_title_lbl"
                    app:layout_constraintTop_toBottomOf="@id/original_title_lbl" />

                <TextView
                    android:id="@+id/release_lbl"
                    style="@style/DetailsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_release_date"
                    app:layout_constraintStart_toStartOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/original_title_txt" />

                <TextView
                    android:id="@+id/release_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/release_lbl"
                    app:layout_constraintTop_toBottomOf="@id/release_lbl" />

                <TextView
                    android:id="@+id/score_lbl"
                    style="@style/DetailsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_score"
                    app:layout_constraintStart_toStartOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/release_txt" />

                <TextView
                    android:id="@+id/score_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/score_lbl"
                    app:layout_constraintTop_toBottomOf="@id/score_lbl" />

                <TextView
                    android:id="@+id/overview_lbl"
                    style="@style/DetailsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_overview"
                    app:layout_constraintStart_toStartOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/score_txt" />

                <TextView
                    android:id="@+id/overview_txt"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="@id/guide_right"
                    app:layout_constraintStart_toStartOf="@id/guide_left"
                    app:layout_constraintTop_toBottomOf="@id/overview_lbl" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/trailers_title"
                style="@style/DetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:padding="10dp"
                android:text="@string/label_trailers"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/reviews_title"
                style="@style/DetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/label_reviews"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>